--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "Gruntfile.js",
   "dependencies": {},
   "devDependencies": {
+    "eslint": "^2.10.2",
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
