--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "Gruntfile.js",
   "dependencies": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.10.2",
-    "grunt": "^1.0.1",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-beautify": "^2.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-csslint": "^0.3.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-jsdoc": "^0.1.5",
+    "gulp-react": "^3.1.0",
+    "gulp-uglify": "^1.5.3",
     "load-grunt-tasks": "^3.5.0"
   },
   "scripts": {
